--- a/Kubernetes/bai-3/templates/ingress-nginx-proxy.yaml
+++ b/Kubernetes/bai-3/templates/ingress-nginx-proxy.yaml
@@ -4,20 +4,22 @@ metadata:
   name: nginx-proxy
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host:  
+    http:
       paths:
-      - path: "/web1"
-        pathType: Prefix
+      - path: /web1/.*
+        pathType: ImplementationSpecific
         backend:
           service:
             name: web1
             port:
               number: 8081
-      - path: "/web2"
-        pathType: Prefix
+      - path: /web2/.*
+        pathType: ImplementationSpecific
         backend:
           service:
             name: web2
